# joongledotdev

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: prod.yaml
assets/: index.html  not_found.html
assets/wasm_tests/: index.html  script.js  wasm_tests.js  wasm_tests_bg.wasm
assets/yahtzee/: index.html  script.js  style.css  yahtzee.js  yahtzee_bg.wasm  yahtzee_bg_wasm-opt.wasm
assets/yahtzee1/: index.html  script.js  style.css
crates/: Cargo.toml
crates-wasm32/: Cargo.toml  build.sh  build_wasm_tests.sh
crates-wasm32/wasm_tests/: Cargo.toml
crates-wasm32/wasm_tests/src/: lib.rs
crates-wasm32/yahtzee/: Cargo.toml
crates-wasm32/yahtzee/src/: lib.rs  lobby_state.rs  platform.rs
crates-wasm32/yahtzee/src/event_loop/: mod.rs
crates-wasm32/yahtzee/src/events/: mod.rs
crates-wasm32/yahtzee/src/game/: connecting.rs  events.rs  lobby.rs  main.rs  mod.rs  submit_name.rs
crates-wasm32/yahtzee/src/game/scene/: connecting.rs  lobby.rs  main.rs  mod.rs
crates-wasm32/yahtzee/src/graphics/: mod.rs
crates-wasm32/yahtzee/src/network/: mod.rs  peer_network.rs  webrtc.rs
crates-wasm32/yahtzee/src/networks/: mod.rs  network.rs  peer.rs  peer_network.rs  peernetwork.rs  webrtc.rs  websocket.rs
crates-wasm32/yahtzee/src/platform/: mod.rs
crates-wasm32/yahtzee/src/render/: image.rs  material.rs  mesh.rs  mod.rs  renderer.rs  shader.wgsl  texture.rs  vertex.rs
crates-wasm32/yahtzee/src/ui/: anchor.rs  button.rs  div.rs  mod.rs  text_input.rs
crates-wasm32/yahtzee/src/util/: fixed_ring_buffer.rs  marker.rs  mod.rs  ring_buffer.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/yahtzee/: lobby.rs  mod.rs
crates/server/src/yahtzee1/: mod.rs
crates/signaling_protocol/: Cargo.toml
crates/signaling_protocol/src/: lib.rs
server/: Cargo.toml
server/src/: error.rs  main.rs
server/src/yahtzee/: lobby.rs  mod.rs
wasm32-crates/: Cargo.toml  build.sh
wasm32-crates/yahtzee/: Cargo.toml
wasm32-crates/yahtzee/src/: lib.rs
wasm32-crates/yahtzee/src/graphics/: mod.rs
yahtzee/src/graphics/: mod.rs
