[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
tower-http = { version = "0.4.1", features = ["fs"] }
dashmap = "5.4.0"
futures = "0.3.28"
bincode = "1.3.3"
rand = "0.8.5"

[dev.dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.4"