[package]
name = "yahtzee"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.64"
wgpu = "0.17.0"
serde = { version = "1.0.164", features = ["derive", "rc"] }
bincode = "1.3.3"
futures = "0.3.28"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Window",
    "Document",
    "Location",
    "MouseEvent",
    "KeyboardEvent",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlAnchorElement",
    "HtmlHeadingElement",
    "HtmlCanvasElement",
    "Node",

    "WebSocket",
    "BinaryType",
    "Blob",
    "FileReader",
    "Event",
    "ErrorEvent",
    "MessageEvent",
    "ProgressEvent",

    "RtcPeerConnection",
    "RtcPeerConnectionState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceServer",
    "RtcConfiguration",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcDataChannelType",
]