[package]
name = "yahtzee"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.21"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
wgpu = "0.20.0"
serde = { version = "1.0.200", features = ["derive", "rc"] }
bincode = "1.3.3"
futures = "0.3.28"
bytemuck = { version = "1.15.0", features = ["derive"] }

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png"]

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Window",
    "Document",
    "Location",
    "MouseEvent",
    "KeyboardEvent",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlAnchorElement",
    "HtmlHeadingElement",
    "HtmlCanvasElement",
    "ResizeObserver",
    "Node",

    "WebSocket",
    "BinaryType",
    "Blob",
    "FileReader",
    "Event",
    "ErrorEvent",
    "MessageEvent",
    "ProgressEvent",

    "RtcPeerConnection",
    "RtcPeerConnectionState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceServer",
    "RtcConfiguration",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcDataChannelType",
]