[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.139"
tower-http = { version = "0.6.1", features = ["fs"] }
dashmap = "6.1.0"
futures = "0.3.28"
bincode = "1.3.3"
rand = "0.9.0"
bytes = "1.10.0"
signaling_protocol = { path = "../signaling_protocol" }

[dev.dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.4"